--- a/src/medis/doclogin.form
+++ b/src/medis/doclogin.form
@@ -81,7 +81,7 @@
               <Properties>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/medis/login-doctor.png"/>
+                  <Image iconType="3" name="/medis/icons/login-doctor.png"/>
                 </Property>
               </Properties>
               <Constraints>
@@ -93,7 +93,7 @@
             <Component class="javax.swing.JLabel" name="jLabel3">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/medis/dialo_background.jpg"/>
+                  <Image iconType="3" name="/medis/icons/dialo_background.jpg"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="jLabel3"/>
               </Properties>
@@ -230,7 +230,7 @@
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/medis/dialo_background.jpg"/>
+              <Image iconType="3" name="/medis/icons/dialo_background.jpg"/>
             </Property>
             <Property name="text" type="java.lang.String" value="jLabel2"/>
           </Properties>
