--- a/src/medis/pharmacy_login.form
+++ b/src/medis/pharmacy_login.form
@@ -74,7 +74,7 @@
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-              <AbsoluteConstraints x="0" y="0" width="300" height="500"/>
+              <AbsoluteConstraints x="0" y="0" width="300" height="400"/>
             </Constraint>
           </Constraints>
 
@@ -86,12 +86,12 @@
               <Properties>
                 <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/medis/pharm_logo1.jpg"/>
+                  <Image iconType="3" name="/medis/icons/pharm_logo1.jpg"/>
                 </Property>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="70" y="50" width="168" height="174"/>
+                  <AbsoluteConstraints x="70" y="100" width="160" height="160"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -107,14 +107,14 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="90" y="230" width="-1" height="-1"/>
+                  <AbsoluteConstraints x="90" y="260" width="-1" height="-1"/>
                 </Constraint>
               </Constraints>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel7">
               <Properties>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                  <Image iconType="3" name="/medis/dialo_background.jpg"/>
+                  <Image iconType="3" name="/medis/icons/dialo_background.jpg"/>
                 </Property>
                 <Property name="text" type="java.lang.String" value="jLabel7"/>
               </Properties>
@@ -251,7 +251,7 @@
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="2" name="C:\Users\khsci5mca16126\Downloads\dialo_background.jpg"/>
+              <Image iconType="3" name="/medis/icons/dialo_background.jpg"/>
             </Property>
             <Property name="text" type="java.lang.String" value="jLabel3"/>
           </Properties>
